--- a/benchmarks/bonnie/Makefile
+++ b/benchmarks/bonnie/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2005/05/16 04:38:03 jlam Exp $
+# $NetBSD: Makefile,v 1.25 2005/07/15 18:27:48 jlam Exp $
 
 DISTNAME=       bonnie
 PKGNAME=	bonnie-2.06
@@ -9,6 +9,8 @@ MASTER_SITES=   http://www.textuality.com/bonnie/
 MAINTAINER=	root@garbled.net
 HOMEPAGE=	http://www.textuality.com/bonnie/index.html
 COMMENT=	Performance Test of Sequential Filesystem I/O and STDIO
+
+NOT_FOR_PLATFORM=	Interix-*-* # has only 32-bit off_t
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
