--- a/benchmarks/randread/Makefile
+++ b/benchmarks/randread/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2004/07/30 15:50:38 minskim Exp $
+# $NetBSD: Makefile,v 1.7 2004/12/03 15:14:51 wiz Exp $
 #
 
 DISTNAME=	randread-0.1
@@ -8,6 +8,8 @@ MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=randread/}
 MAINTAINER=	grant@NetBSD.org
 HOMEPAGE=	http://randread.sourceforge.net/
 COMMENT=	Program to help benchmark random disk read performance
+
+NOT_FOR_PLATFORM=	Interix-*-*
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
