--- a/wm/wmi/Makefile
+++ b/wm/wmi/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.7 2005/04/11 21:47:49 tv Exp $
+# $NetBSD: Makefile,v 1.8 2005/06/01 18:03:26 jlam Exp $
 #
 
 DISTNAME=	wmi-10
 CATEGORIES=	wm
-MASTER_SITES=	http://download.berlios.de/wmi/
+MASTER_SITES=	http://wmii.de/download/
 
 MAINTAINER=	tech-pkg@NetBSD.org
-HOMEPAGE=	http://wmi.modprobe.de/
+HOMEPAGE=	http://wmii.de/
 COMMENT=	Minimalist, flexible and highly customizable window manager
 
 USE_LANGUAGES=	c c++
