--- a/net/whatmask/Makefile
+++ b/net/whatmask/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2003/07/17 22:52:02 grant Exp $
+# $NetBSD: Makefile,v 1.4 2003/12/19 12:23:56 zuntum Exp $
 #
 
 DISTNAME=	whatmask-1.2
@@ -11,4 +11,5 @@ COMMENT=	Easily convert between three common subnet mask notations
 
 GNU_CONFIGURE=	YES
 
+.include "../../devel/sysexits/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
