--- a/net/tcpdmerge/Makefile
+++ b/net/tcpdmerge/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2003/07/21 17:11:22 martti Exp $
+# $NetBSD: Makefile,v 1.6 2004/01/20 12:22:22 agc Exp $
 
 DISTNAME=	tcpdmerge-1.0
 CATEGORIES=	net
@@ -18,4 +18,5 @@ do-extract:
 	done
 	${CP} ${FILESDIR}/Makefile ${WRKSRC}
 
+.include "../../net/libpcap/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
