--- a/net/sipcalc/Makefile
+++ b/net/sipcalc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2003/07/12 00:21:11 zuntum Exp $
+# $NetBSD: Makefile,v 1.4 2003/07/17 22:51:50 grant Exp $
 #
 
 DISTNAME=	sipcalc-1.1.2
@@ -11,5 +11,11 @@ COMMENT=	IPv4/IPv6 subnet calculator
 
 GNU_CONFIGURE=		YES
 CONFIGURE_ARGS+=	--disable-web
+
+.include "../../mk/bsd.prefs.mk"
+
+.if empty(_OPSYS_HAS_INET6:M[Yy][Ee][Ss])
+PKG_SKIP_REASON+=	"${PKGNAME} requires IPv6 support libraries"
+.endif
 
 .include "../../mk/bsd.pkg.mk"
