--- a/net/tcpdstat/Makefile
+++ b/net/tcpdstat/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2004/07/10 09:08:44 grant Exp $
+# $NetBSD: Makefile,v 1.9 2005/04/11 21:47:00 tv Exp $
 
 DISTNAME=	tcpd-tools-0.8
 PKGNAME=	tcpdstat-0.8
@@ -7,6 +7,8 @@ MASTER_SITES=	ftp://tracer.csl.sony.co.jp/pub/mawi/tools/
 
 MAINTAINER=	tech-pkg@NetBSD.org
 COMMENT=	Analyze tcpdump output
+
+NOT_FOR_PLATFORM=	Interix-*-*
 
 WRKSRC=		${WRKDIR}/${DISTNAME}/tcpdstat
 MAKE_ENV=	BINDIR=${PREFIX}/bin
