--- a/sysutils/memtester/Makefile
+++ b/sysutils/memtester/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2005/08/07 11:56:01 schmonz Exp $
+# $NetBSD: Makefile,v 1.12 2005/08/24 04:47:10 schmonz Exp $
 #
 
 DISTNAME=		memtester-4.0.5
@@ -8,6 +8,8 @@ MASTER_SITES=		${HOMEPAGE}
 MAINTAINER=		schmonz@NetBSD.org
 HOMEPAGE=		http://pyropus.ca/software/memtester/
 COMMENT=		Utility for testing the memory subsystem for faults
+
+NOT_FOR_PLATFORM=	Interix-*-* # no m[un]lock(2), so not useful anyway
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
