--- a/math/admesh/Makefile
+++ b/math/admesh/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2003/07/17 21:47:18 grant Exp $
+# $NetBSD: Makefile,v 1.7 2005/06/17 03:50:19 jlam Exp $
 
 DISTNAME=		admesh-0.95
 CATEGORIES=		math
@@ -9,6 +9,7 @@ HOMEPAGE=		http://www.varlog.com/products/admesh/
 COMMENT=		Program for processing triangulated solid meshes
 
 GNU_CONFIGURE=		yes
+CONFIGURE_HAS_MANDIR=	no
 INSTALLATION_DIRS=	bin
 
 do-install:
