--- a/x11/qt3-libs/Makefile
+++ b/x11/qt3-libs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.39 2005/08/17 06:26:18 jdc Exp $
+# $NetBSD: Makefile,v 1.40 2005/09/27 07:46:20 adam Exp $
 
 LIBQT=			${WRKSRC}/lib/libqt-mt.la
 
@@ -10,7 +10,7 @@ GCC_REQD+=		3.4
 GCC_REQD+=		2.95.3
 .endif
 
-.include "../qt3-libs/Makefile.common"
+.include "../../x11/qt3-libs/Makefile.common"
 
 PKGNAME=		qt3-libs-${QTVERSION}
 MAINTAINER=		adam@NetBSD.org
