--- a/x11/qt3-libs/Makefile.common
+++ b/x11/qt3-libs/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.54 2005/07/01 01:10:06 reed Exp $
+# $NetBSD: Makefile.common,v 1.55 2005/07/18 02:33:27 jlam Exp $
 #
 DISTNAME=		qt-x11-free-${QTVERSION}
 CATEGORIES=		x11
@@ -6,7 +6,7 @@ MASTER_SITES=		ftp://ftp.trolltech.com/qt/source/ \
 			ftp://ftp.bero.org/pub/qt/source/
 EXTRACT_SUFX=		.tar.bz2
 
-.include "../qt3/Makefile.common"
+.include "../../x11/qt3/Makefile.common"
 
 DISTINFO_FILE=		${.CURDIR}/../../x11/qt3-libs/distinfo
 FILESDIR=		${.CURDIR}/../../x11/qt3-libs/files
