--- a/security/qca-tls/Makefile
+++ b/security/qca-tls/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.8 2005/09/13 04:27:21 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.9 2005/09/28 14:31:08 rillig Exp $
 
 DISTNAME=	qca-tls-1.0
-PKGREVISION=	# empty
 CATEGORIES=	security
-MASTER_SITES=	${MASTER_SITE_SOURCEFORCE:=psi/}
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=psi/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jdolecek@NetBSD.org
