--- a/textproc/hyperestraier/Makefile
+++ b/textproc/hyperestraier/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2005/10/23 19:13:44 minskim Exp $
 
-DISTNAME=	hyperestraier-1.0.1
+DISTNAME=	hyperestraier-1.0.3
 CATEGORIES=	japanese textproc www
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=hyperestraier/}
 
