--- a/graphics/libkipi/Makefile
+++ b/graphics/libkipi/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.4 2005/05/22 20:08:06 jlam Exp $
+# $NetBSD: Makefile,v 1.5 2005/10/18 09:34:02 seb Exp $
 
 DISTNAME=	libkipi-0.1.2
 CATEGORIES=	graphics
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=digikam/}
 EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=	seb@NetBSD.ORG
+MAINTAINER=	seb@NetBSD.org
 HOMEPAGE=	http://extragear.kde.org/apps/kipi/
 COMMENT=	KDE Image Plugin Interface
 
