--- a/devel/ruby-readline/Makefile
+++ b/devel/ruby-readline/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2005/03/06 17:19:06 taca Exp $
+# $NetBSD: Makefile,v 1.17 2005/04/11 21:45:38 tv Exp $
 #
 
 DISTNAME=		${RUBY_DISTNAME}
@@ -12,7 +12,6 @@ HOMEPAGE=		${RUBY_HOMEPAGE}
 COMMENT=		Ruby extension to readline library
 
 RUBY_HAS_ARCHLIB=	yes
-USE_GNU_READLINE=	# uses rl_event_hook interface to GNU readline
 USE_RUBY_EXTCONF=	yes
 EXTRACT_ELEMENTS=	${RUBY_DISTNAME}/ext/readline
 WRKSRC=			${RUBY_WRKSRC}/ext/readline
