--- a/x11/ruby-tk/Makefile
+++ b/x11/ruby-tk/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2005/04/11 21:48:13 tv Exp $
+# $NetBSD: Makefile,v 1.18 2005/06/01 18:03:31 jlam Exp $
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-tk-${RUBY_VERSION}
-PKGREVISION=	1
 CATEGORIES=	x11 ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
 
