--- a/converters/ruby-iconv/Makefile
+++ b/converters/ruby-iconv/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.14 2005/03/06 17:19:05 taca Exp $
+# $NetBSD: Makefile,v 1.15 2005/04/11 21:45:09 tv Exp $
 #
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-iconv-${RUBY_VERSION}
-PKGREVISION=	1
 CATEGORIES=	converters ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
 
