--- a/devel/ruby-readline/Makefile
+++ b/devel/ruby-readline/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2005/04/11 21:45:38 tv Exp $
+# $NetBSD: Makefile,v 1.18 2005/11/02 08:59:04 taca Exp $
 #
 
 DISTNAME=		${RUBY_DISTNAME}
 PKGNAME=		${RUBY_PKGPREFIX}-readline-${RUBY_VERSION}
-PKGREVISION=		1
 CATEGORIES=		devel ruby
 MASTER_SITES=		${MASTER_SITE_RUBY}
 
