--- a/databases/ruby-gdbm/Makefile
+++ b/databases/ruby-gdbm/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.12 2005/03/06 17:19:05 taca Exp $
+# $NetBSD: Makefile,v 1.13 2005/04/11 21:45:15 tv Exp $
 #
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-gdbm-${RUBY_VERSION}
-PKGREVISION=	1
 CATEGORIES=	databases ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
 
