--- a/converters/ruby-uconv/Makefile
+++ b/converters/ruby-uconv/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2005/03/06 17:19:05 taca Exp $
+# $NetBSD: Makefile,v 1.11 2005/03/24 21:12:52 wiz Exp $
 
 DISTNAME=	uconv-0.4.12
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME}
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	converters japanese ruby
 MASTER_SITES=	http://www.yoshidam.net/
 
