--- a/databases/ruby-DBD-sqlite/Makefile
+++ b/databases/ruby-DBD-sqlite/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2005/04/11 21:45:15 tv Exp $
+# $NetBSD: Makefile,v 1.5 2005/11/02 08:29:43 taca Exp $
 
 DISTNAME=	ruby-dbi-all-${RUBY_DBI_VERSION}
 PKGNAME=	${RUBY_PKGPREFIX}-DBD-sqlite-${RUBY_DBI_VERSION}
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	databases ruby
 MASTER_SITES=	${RUBY_DBI_MASTER_SITES}
 
