--- a/databases/ruby-postgresql/Makefile
+++ b/databases/ruby-postgresql/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.23 2005/04/11 21:45:16 tv Exp $
+# $NetBSD: Makefile,v 1.24 2005/04/12 14:49:46 taca Exp $
 
 DISTNAME=		ruby-postgres-${VERSION}
 PKGNAME=		${RUBY_PKGPREFIX}-postgresql-${VERSION}
-PKGREVISION=		3
+PKGREVISION=		4
 CATEGORIES=		databases ruby
 MASTER_SITES=		http://raa.ruby-lang.org/cache/postgres/ \
 			http://ruby.scripting.ca/postgres/archive/ \
