--- a/devel/ruby-subversion/Makefile
+++ b/devel/ruby-subversion/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2005/05/23 22:58:26 epg Exp $
+# $NetBSD: Makefile,v 1.2 2005/10/18 13:31:01 seb Exp $
 
 PKGNAME=	${RUBY_PKGPREFIX}-subversion-${SVNVER}
+PKGREVISION=	1
 COMMENT=	Ruby bindings for Subversion
 
 .include "../../devel/subversion/Makefile.common"
