--- a/math/ruby-gsl/Makefile
+++ b/math/ruby-gsl/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.7 2005/03/06 17:19:06 taca Exp $
+# $NetBSD: Makefile,v 1.8 2005/04/11 21:46:31 tv Exp $
 
 DISTNAME=	ruby-gsl-0.2.0
 PKGNAME=	${RUBY_PKGPREFIX}-gsl-0.2.0
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=ruby-gsl/}
 
