--- a/security/ruby-tcpwrap/Makefile
+++ b/security/ruby-tcpwrap/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2005/03/24 21:13:00 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2005/04/11 21:47:19 tv Exp $
 
 DISTNAME=	ruby-tcpwrap-0.6
 PKGNAME=	${RUBY_PKGPREFIX}-tcpwrap-0.6
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	security ruby
 MASTER_SITES=	http://www.shugo.net/archive/ruby-tcpwrap/
 
