--- a/x11/ruby-gtk/Makefile
+++ b/x11/ruby-gtk/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.32 2005/04/11 21:48:13 tv Exp $
+# $NetBSD: Makefile,v 1.33 2005/06/01 18:03:31 jlam Exp $
 
 DISTNAME=	ruby-gtk-${VERSION}
 PKGNAME=	${RUBY_PKGPREFIX}-gtk-${VERSION}
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	x11 ruby
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=ruby-gnome/}
 
