--- a/devel/newfile/Makefile
+++ b/devel/newfile/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2005/03/06 17:19:05 taca Exp $
+# $NetBSD: Makefile,v 1.11 2005/04/11 21:45:28 tv Exp $
 #
 
 DISTNAME=	newfile-1.0.14
@@ -12,6 +12,7 @@ COMMENT=	Tool for creating starter files in various languages
 
 NO_BUILD=	yes
 GNU_CONFIGURE=	yes
+USE_RUBY_DIST_SUBDIR=	yes
 
 .include "../../lang/ruby/rubyversion.mk"
 
