--- a/net/udptunnel/Makefile
+++ b/net/udptunnel/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2003/06/02 01:17:39 jschauma Exp $
+# $NetBSD: Makefile,v 1.3 2003/07/17 22:51:58 grant Exp $
 #
 
 DISTNAME=	udptunnel-1.1
+PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.cs.columbia.edu/pub/lennox/udptunnel/
 
@@ -9,6 +10,10 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.cs.columbia.edu/~lennox/udptunnel/
 COMMENT=	Tunnel UDP packets over a TCP connection
 
-GNU_CONFIGURE=	YES
+GNU_CONFIGURE=		YES
+INSTALLATION_DIRS=	bin share/doc/html
+
+post-install:
+	${INSTALL_DATA} ${WRKSRC}/udptunnel.html ${PREFIX}/share/doc/html/
 
 .include "../../mk/bsd.pkg.mk"
