--- a/audio/xmms/Makefile.common
+++ b/audio/xmms/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.18 2005/05/31 16:28:54 wiz Exp $
+# $NetBSD: Makefile.common,v 1.19 2005/06/01 18:02:39 jlam Exp $
 #
 
 DISTNAME=	xmms-1.2.10
@@ -70,7 +70,7 @@ PLIST_SUBST+=	LIBAUDIO=libOSS
 # to build the OSS module. explicitly turn it off for all platforms
 # except those which support OSS.
 .if ${OPSYS} != "FreeBSD" && ${OPSYS} != "Linux" && ${OPSYS} != "NetBSD" && \
-	${OPSYS} != "OpenBSD"
+	${OPSYS} != "OpenBSD" && ${OPSYS} != "DragonFly"
 CONFIGURE_ARGS+=	--disable-oss
 .endif
 
