--- a/net/rootprobe/Makefile
+++ b/net/rootprobe/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2004/02/21 07:31:31 snj Exp $
+# $NetBSD: Makefile,v 1.10 2005/06/17 03:50:28 jlam Exp $
 #
 
 DISTNAME=	rootprobe-20030115
@@ -9,6 +9,8 @@ MASTER_SITES=	http://mawi.wide.ad.jp/mawi/dnsprobe/
 MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://mawi.wide.ad.jp/mawi/dnsprobe/
 COMMENT=	Root DNS server performance analysis
+
+NOT_FOR_PLATFORM=	Interix-*-* # no <net/if.h> support
 
 WRKSRC=		${WRKDIR}/rootprobe
 
