--- a/graphics/ns-cult3d/Makefile
+++ b/graphics/ns-cult3d/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2003/07/17 21:41:56 grant Exp $
+# $NetBSD: Makefile,v 1.4 2004/01/24 00:38:23 kristerw Exp $
 #
 
 DISTNAME=	Cult3D_NS4_5.2b1
@@ -10,6 +10,7 @@ MAINTAINER=	abs@NetBSD.org
 HOMEPAGE=	http://www.cult3d.com/
 COMMENT=	Netscape plugin for cult 3d files
 
+NOT_FOR_PLATFORM=	Interix-*-*
 ONLY_FOR_PLATFORM=      *-*-i386
 
 WRKSRC=			${WRKDIR}/cult3d-5.2-b1-linux-x86
