--- a/sysutils/xapply/Makefile
+++ b/sysutils/xapply/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.2 2005/04/11 21:47:30 tv Exp $
+# $NetBSD: Makefile,v 1.3 2005/07/02 16:52:59 epg Exp $
 #
 
 DISTNAME=		xapply-3.4
 PKGREVISION=		1
-CATEGORIES=		mine
+CATEGORIES=		sysutils
 MASTER_SITES=		http://archive.progeny.com/pundits/
 EXTRACT_SUFX=		.tgz
 
