--- a/graphics/p5-PerlMagick/Makefile
+++ b/graphics/p5-PerlMagick/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.42 2005/07/16 01:19:11 jlam Exp $
+# $NetBSD: Makefile,v 1.43 2005/08/06 06:19:21 jlam Exp $
 
 .include "../../graphics/ImageMagick/Makefile.common"
 
@@ -8,7 +8,7 @@ PKGREVISION=	1
 SVR4_PKGNAME=	p5pma
 
 MAINTAINER=	tech-pkg@NetBSD.org
-HOMEPAGE=	http://www.simplesystems.org/ImageMagick/
+HOMEPAGE=	http://www.simplesystems.org/ImageMagick/www/perl-magick.html
 COMMENT=	Object-oriented Perl interface to ImageMagick
 
 DISTINFO_FILE=	${.CURDIR}/../../graphics/ImageMagick/distinfo
